# didweb-api

./: .gitignore  Cargo.toml  LICENSE  README.md  database.db
src/: auth.rs  database.db  database.rs  handler.rs  handlers.rs  main.rs
src/migrations/: 20230602000000_create_users_table.sql
