[package]
name = "didweb-api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.5", default-features = false }
tokio = { version = "1.36.0", features = ["full"]}
serde = { version = "1.0.197", features = ["derive"]}
worker = { version = "0.0.24", features = ["http"]} 
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
argon2 = "0.5.3"
rand = "0.8.5" 
# tower = "0.4.13"
# mime = "0.3.17"
# reqwest = "0.12.2"
# tower-service = "0.3.2"
# hyper = { version = "1.2.0", features = ["full"]}
